fix: Make focus style of module section links not also cover whitespace below

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
@@ -517,6 +517,7 @@ div#page-feedback a {
 .module-section--header {
     display: grid;
     grid-template-columns: auto 139px;
+    padding-bottom: 24px;
 }
 
 .module-overview--section {
@@ -631,4 +632,8 @@ section.completed {
 
 .pathways-nav {
     padding-top: 25px;
+}
+
+.pathways-module-index {
+    margin-bottom: 0px;
 }
